--- a/veamflex/index.html
+++ b/veamflex/index.html
@@ -8,31 +8,65 @@
   </head>
   <body>
     <header class="header"></header>
-    <main class="main">
+    <main class="wrapper">
       <article class="cont-detail">
-        <img src="images/cover.png" alt="인크레더블 커버" class="img-cover" />
+        <div class="cont-cover">
+          <img src="images/cover.png" alt="인크레더블 커버" class="img-cover" />
+        </div>
         <div class="cont-info">
-          <a href="#" class="link_new">NEW</a>
-          <h3 class="tit">The Incredible</h3>
-          <p class="txt-description">
-            2004년 12월 15일에 개봉한 픽사의 6번째 장편 애니메이션으로 연출은
-            브래드 버드 감독이다. 2004년 10월 27일에 영국 BFI 런던 영화제에서
-            처음으로 개봉했다. 기술적으로는 물과 머리카락의 물리적 감촉을 지극히
-            충실히 표현한 점이 특징이다. "은퇴 후의 슈퍼히어로 가족"이라는
-            독특한 소재를 다루어 일반인처럼 살아가야하는 그들의 고뇌와 함께
-            역경을 딛고 다시금 슈퍼히어로와, 일반 시민으로서도 재기해내는 모습을
-            담아내고 있다. 비록 어린이 대상이긴 했지만 내용들을 보면 상당히 깊은
-            내용들이 담겨 있어서 이게 과연 어린이들을 상대로 한 작품인가 싶을
-            정도. 사회의 어두운 면도 은근히 내제하고 있는 뜯어보면 더 대단한
-            작품이기도 하다. 이 때문에 왓치맨의 영향을 받은 작품들 중 하나이기도
-            하다는 주장도 있다. 인크레더블 가족의 능력에 판타스틱 포를 닮은
-            부분이 많다. 헬렌의 능력은 미스터 판타스틱의 능력이고 바이올렛의
-            능력은 인비저블 우먼의 능력이다. 밥의 경우, 몸의 구성물은 평범한
-            인간이지만 엄청난 내구력과 괴력을 가졌다는 것에서 싱과 닮았다.
-            대시의 경우 히어로서의 능력은 휴먼 토치와 다르지만(능력만 따지면
-            퀵실버를 닮았다), 캐릭터면에서 '투명화 능력이 있는 누나의 반항기
-            있는 남동생’ 이라는 점에서 조니 스톰과 궤를 같이 한다.
-          </p>
+          <div class="cont-info-left">
+            <a href="#" class="link_new">NEW</a>
+            <h3 class="tit">The Incredible</h3>
+            <h4 class="about txt-ir">about</h4>
+            <p class="txt-description">
+              2004년 12월 15일에 개봉한 픽사의 6번째 장편 애니메이션으로 연출은
+              브래드 버드 감독이다. 2004년 10월 27일에 영국 BFI 런던 영화제에서
+              처음으로 개봉했다. 기술적으로는 물과 머리카락의 물리적 감촉을
+              지극히 충실히 표현한 점이 특징이다.
+              <br /><br />
+              "은퇴 후의 슈퍼히어로 가족"이라는 독특한 소재를 다루어 일반인처럼
+              살아가야하는 그들의 고뇌와 함께 역경을 딛고 다시금 슈퍼히어로와,
+              일반 시민으로서도 재기해내는 모습을 담아내고 있다. 비록 어린이
+              대상이긴 했지만 내용들을 보면 상당히 깊은 내용들이 담겨 있어서
+              이게 과연 어린이들을 상대로 한 작품인가 싶을 정도. 사회의 어두운
+              면도 은근히 내제하고 있는 뜯어보면 더 대단한 작품이기도 하다. 이
+              때문에 왓치맨의 영향을 받은 작품들 중 하나이기도 하다는 주장도
+              있다.
+              <br /><br />
+              인크레더블 가족의 능력에 판타스틱 포를 닮은 부분이 많다. 헬렌의
+              능력은 미스터 판타스틱의 능력이고 바이올렛의 능력은 인비저블
+              우먼의 능력이다. 밥의 경우, 몸의 구성물은 평범한 인간이지만 엄청난
+              내구력과 괴력을 가졌다는 것에서 싱과 닮았다. 대시의 경우
+              히어로서의 능력은 휴먼 토치와 다르지만(능력만 따지면 퀵실버를
+              닮았다), 캐릭터면에서 '투명화 능력이 있는 누나의 반항기 있는
+              남동생’ 이라는 점에서 조니 스톰과 궤를 같이 한다.
+            </p>
+          </div>
+          <div class="cont-info-right">
+            <dt class="tag-label tag-genre">Genre</dt>
+            <ul class="list-genre">
+              <li><a href="#" class="link-genre">Action</a></li>
+              <li><a href="#" class="link-genre">Comedy</a></li>
+              <li><a href="#" class="link-genre">Drama</a></li>
+              <li><a href="#" class="link-genre">Fantasy</a></li>
+              <li><a href="#" class="link-genre">Horror</a></li>
+              <li><a href="#" class="link-genre">Mystery</a></li>
+              <li><a href="#" class="link-genre">Romance</a></li>
+              <li><a href="#" class="link-genre">Thriller</a></li>
+            </ul>
+            <h4 class="tag-label tag-ratings">Ratings</h4>
+            <div class="stars">
+              <span class="txt-ir">4.5점</span>
+            </div>
+            <!-- 수면시간 확보를 위해 별점은 미뤘습니다 -->
+            <h4 class="tag-label tag-casts">Casts</h4>
+            <ul class="list-casts">
+              <li><img src="images/member01.png" alt="밥파" /></li>
+              <li><img src="images/member02.png" alt="대쉬파" /></li>
+              <li><img src="images/member03.png" alt="헬렌파" /></li>
+              <li><img src="images/member04.png" alt="바이올렛파" /></li>
+            </ul>
+          </div>
         </div>
       </article>
     </main>
