영화 소개 문단 분리

--- a/veamflex/index.html
+++ b/veamflex/index.html
@@ -23,7 +23,8 @@
               브래드 버드 감독이다. 2004년 10월 27일에 영국 BFI 런던 영화제에서
               처음으로 개봉했다. 기술적으로는 물과 머리카락의 물리적 감촉을
               지극히 충실히 표현한 점이 특징이다.
-              <br /><br />
+            </p>
+            <p class="txt-description">
               "은퇴 후의 슈퍼히어로 가족"이라는 독특한 소재를 다루어 일반인처럼
               살아가야하는 그들의 고뇌와 함께 역경을 딛고 다시금 슈퍼히어로와,
               일반 시민으로서도 재기해내는 모습을 담아내고 있다. 비록 어린이
@@ -32,7 +33,8 @@
               면도 은근히 내제하고 있는 뜯어보면 더 대단한 작품이기도 하다. 이
               때문에 왓치맨의 영향을 받은 작품들 중 하나이기도 하다는 주장도
               있다.
-              <br /><br />
+            </p>
+            <p class="txt-description">
               인크레더블 가족의 능력에 판타스틱 포를 닮은 부분이 많다. 헬렌의
               능력은 미스터 판타스틱의 능력이고 바이올렛의 능력은 인비저블
               우먼의 능력이다. 밥의 경우, 몸의 구성물은 평범한 인간이지만 엄청난
@@ -58,7 +60,7 @@
             <div class="stars">
               <span class="txt-ir">4.5점</span>
             </div>
-            <!-- 수면시간 확보를 위해 별점은 미뤘습니다 -->
+            <!-- 별점 -->
             <h4 class="tag-label tag-casts">Casts</h4>
             <ul class="list-casts">
               <li><img src="images/member01.png" alt="밥파" /></li>
