--- a/timeline/index-re.html
+++ b/timeline/index-re.html
@@ -12,6 +12,7 @@
       <div class="wrapper">Header</div>
     </header>
     <main class="main">
+      <!--wrapper를 헤더, 메인에 모두 넣어줘서 콘텐츠의 영역을 잡아줌-->
       <div class="wrapper">
         <ol class="timeline">
           <li class="timeline-item">
